# introduction-to-data-pipelines-and-apache-airflow

./: .gitignore
airflow/: docker-compose.yml
airflow/mnt/dags/: .airflowignore  day_3_dag.py  dog_api_pipeline.py  everyday_dag.py  weather_api__dag.py  weather_dbt_dag.py
airflow/weather/: pyproject.toml
airflow/weather/weather/: .user.yml  profiles.yml
airflow/weather/weather/models/marth/: average_temperature_in_bangkok.sql
airflow/weather/weather/models/staging/: _models.yml
airflow/weather/weather/tests/: assert_temperature_not_greater_than_60.sql
my_first_project/: dogs.json  my_first_data_pipeline.py  pyproject.toml
pay_with_data_quality/: main.py  pyproject.toml
pay_with_greate_expectation/: data.csv  main.py  pyproject.toml
